@@ -151,6 +151,11 @@ void SVNReadProperties::Construct()
 
     // set up the configuration
     m_pctx->config = SVNConfig::Instance().GetConfig();
+    if (m_pctx->config == nullptr)
+    {
+        Err = svn_config_get_config (&(m_pctx->config), g_pConfigDir, m_pool);
+    }
+
     if (Err)
     {
         ShowErrorDialog(NULL);
