@@ -34,6 +34,8 @@ Version 1.7.8
        admin dirs. (Stefan)
 - BUG: Issue #327: Access violation with
        "Show log" on copied entry. (Stefan)
+- BUG: Issue #330: crash with invalid
+       config file. (Stefan)
 
 Version 1.7.7
 - BUG: Issue #233: Crash when closing the
